unpackaged/main/default/objects/Candidate__c/fields/Current_Employer__c.field-meta.xml
<CustomField>
    <fullName>Current_Employer__c</fullName>
    <label>Current Employer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>