unpackaged/main/default/objects/Candidate__c/fields/Years__c.field-meta.xml
<CustomField>
    <fullName>Years__c</fullName>
    <label>Years of Exprience</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>