unpackaged/main/default/objects/Candidate__c/listViews/Employed_Candidates.listView-meta.xml
<ListView>
    <fullName>Employed_Candidates</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Employed Candidates</label>
</ListView>