unpackaged/main/default/objects/Candidate__c/listViews/Non_Employed_Candidates.listView-meta.xml
<ListView>
    <fullName>Non_Employed_Candidates</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Non Employed Candidates</label>
</ListView>